<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">万达影视(程涛)</string>
    <string name="hello_world">Hello world!</string>
    <string name="slide_icon">slide_icon</string>
    <string name="title_line">title_line</string>
    <string name="tv_beijing">北京</string>
    <string name="choose_city_icon">choose_city_icon</string>
    <string name="tv_mian_title">万达电影</string>
    <string name="tab_itme">tab_itme</string>
    <string name="play_on">正在上映</string>
    <string name="zzsy">正在上映</string>
    <string name="jjsy">即将上映</string>
    <string name="yxxyp">已下线影片</string>
    <string name="im_ad">im_ad</string>
    <string name="list_item">list_item</string>
    <string name="list_item_title">Title</string>
    <string name="list_item_content">Content</string>
    <string name="iv_gallery">gallery</string>
    <string name="gallery_title">title</string>
    <string name="gallery_content">content</string>
    <string name="gallery_score">4.8</string>
    <string name="gallery_comment">30</string>
    <string name="choose_city">choose_city</string>
    <string name="tv_choose_city">选择城市</string>

    <string-array name="city_group_list">
        <item>华北区</item>
        <item>华北区</item>
        <item>华北区</item>
        <item>东北区</item>
        <item>东北区</item>
        <item>东北区</item>
        <item>东南区</item>
        <item>东南区</item>
        <item>东南区</item>
        <item>西南区</item>
        <item>西南区</item>
        <item>西南区</item>
        <item>西北区</item>
        <item>西北区</item>
        <item>西北区</item>
    </string-array>
    <string-array name="city_description_list">
        <item>北京</item>
        <item>天津</item>
        <item>保定</item>
        <item>哈尔滨</item>
        <item>沈阳</item>
        <item>长春</item>
        <item>福州</item>
        <item>广州</item>
        <item>南京</item>
        <item>成都</item>
        <item>重庆</item>
        <item>遵义</item>
        <item>乌鲁木齐</item>
        <item>拉萨</item>
        <item>西宁</item>
    </string-array>
        <string name="tv_hua_bei">华北区</string>
        <string name="tv_city_bei_jing">北京</string>
        <string name="moive_info_title">建国大业</string>
        <string name="movie_info">movie_info</string>
        <string name="movie_info_score">4.8</string>
        <string name="movie_info_commet">36</string>
        <string name="movie_info_comment">36</string>
        <string name="movie_info_slect_sence">影院场次</string>
        <string name="movie_info_prevue">预告片</string>
        <string name="moive_info_detail">&#160;&#160;《建党伟业》（Beginning of the Great Revival）是为庆祝中国共产党建党九十周年而制作的献礼影片。[1]  该片由韩三平、黄建新执导（海外部分由李少红执导，五四时期部分由陆川执导，战争场面由沈东执导），由刘烨、陈坤、张嘉译、冯远征等108位明星出演</string>
        <string name="moive_info_detail_direct">导演:韩三平、黄建新\n编剧:黄欣、郭俊立、董哲\n制片人:韩三平</string>
        <string name="moive_info_detail_time">国家:中国 \n时长:120分钟 \n上映时间:2010年</string>
        <string name="movie_info_list">movie_info_list</string>
        <string name="moive_info_share_list_item">moive_info_share_list_item</string>
        <string name="movie_comment">movie_comment</string>
        <string name="movie_comment_title">用户影评</string>
        <string name="moive_write_comment_done">完成</string>
        <string name="moive_write_comment_title">发表影评</string>
        <string name="moive_write_comment_content_title_hinit">输入标题</string>
        <string name="moive_write_comment_content">输入影评</string>
        <string name="pop_window_movie">万达影城</string>
        <string name="pop_window_card">我的账号</string>
        <string name="pop_window_setting">设置</string>
        <string name="pop_window_add_data">添加数据</string>
        <string name="comment_title">评论标题</string>
        <string name="comment_content">评论内容</string>
        <string name="comment_image">评论图片</string>
        <string name="comment_num">0</string>
        <string name="_3_8">3.8</string>
        <string name="_31">31</string>
        <string name="moive_cinema_title">万达影城</string>
        <string name="movie_cinema_list_title">北京万达影城</string>
        <string name="movie_cinema_address">北京朝阳区</string>
        <string name="cinema_list">影院列表</string>
        <string name="movie_cinema_list_city_name">北京</string>
        <string name="movie_cinema_info_seat">影院场次</string>
        <string name="movie_cinema_info_seat_info">影城位置信息</string>
        <string name="seat_num">影城座位数:</string>
        <string name="seat_num_text">1424</string>
        <string name="park_address">停车位置:</string>
        <string name="park_address_text">国贸CBD万达商业广场B2停车场</string>
        <string name="phone_num">电话:</string>
        <string name="phone_num_text">010&#045;59603399</string>
        <string name="cinema_style">影院特色:</string>
        <string name="tv_discount">优惠信息:</string>
        <string name="tv_discount_text">周二全天半价，周三生日免费观影，周四女士半价，周一、周三至周五12:00（含）前观影半价，IMAX每天首场半价；半价时段3D、IMAX影片享受7折优惠</string>
        <string name="cinema_info_gallery">cinemaInfoGallery</string>
        <string name="user_title">我的账户</string>
        <string name="user_content">我的账户</string>
        <string name="movie_schedule_title">场次</string>
        <string name="movie_schedule_movie_name">建国伟业</string>
        <string name="schedule_time_date">星期三</string>
        <string name="schedule_time_month">02月17日</string>
        <string name="btn_full">已满座 </string>
        <string name="btn_will_fill">即将满座</string>
        <string name="btn_enough">座位充足</string>
        <string name="schedule_list_title">北京万达影城</string>
        <string name="movie_cinema_schedule_title">北京万达影城</string>
        <string name="moive_seat_buy">购票</string>
        <string name="moive_seat_title">座位表</string>
</resources>