<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:background="@drawable/home_list_backcolor1"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/tab_itme" />

    <Button
        android:id="@+id/zzsy"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="4"
        android:background="@drawable/home_list_backcolor1"
        android:text="@string/zzsy"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:contentDescription="@string/tab_itme"
        android:src="@drawable/home_title_line" />

    <Button
        android:id="@+id/jjsy"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="4"
        android:background="@drawable/home_list_backcolor1"
        android:text="@string/jjsy"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:contentDescription="@string/tab_itme"
        android:src="@drawable/home_title_line" />

    <Button
        android:id="@+id/yxxyp"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="4"
        android:background="@drawable/home_list_backcolor1"
        android:text="@string/yxxyp"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/tab_itme" />

</LinearLayout>