<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movie_info_item_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/home_titile_backgroud"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/moive_write_comment_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/btn_back"
            android:contentDescription="@string/movie_comment"
            android:text="@string/moive_write_comment_done"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/moive_write_comment_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/movie_comment"
            android:src="@drawable/return_button" />

        <TextView
            android:id="@+id/moive_write_comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/moive_write_comment_done"
            android:layout_centerHorizontal="true"
            android:text="@string/moive_write_comment_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <RatingBar
        android:id="@+id/moive_write_comment_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:id="@+id/moive_write_comment_content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/moive_write_comment_content_title_hinit"
        android:inputType="text" />

    <EditText
        android:id="@+id/moive_write_comment_content"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/moive_write_comment_content"
        android:inputType="textMultiLine"
        android:maxLines="5" >

    </EditText>

</LinearLayout>