<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movie_info_item_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" 
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/home_titile_backgroud" >
        <Button
            android:id="@+id/movie_cinema_info_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@drawable/location_button"/>

        <Button
            android:id="@+id/moive_cinema_info_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@drawable/return_button" />

        <TextView
            android:id="@+id/moive_cinema_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:text="@string/moive_cinema_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ImageView
        android:layout_marginTop="-29dp"
        android:layout_marginBottom="-29dp"
        android:contentDescription="@string/movie_comment"
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home_title_image" />

    <ImageView
        android:contentDescription="@string/movie_comment"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/movie_info_line" />

    <Button
        android:id="@+id/movie_cinema_info_seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_cinema_info_seat" 
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#00000000"/>
    <ImageView
        android:contentDescription="@string/movie_comment"
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/movie_info_line" />
    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/movie_cinema_info_seat_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_cinema_info_seat_info" 
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:background="#00000000"/>
     <ImageView
        android:contentDescription="@string/movie_comment"
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/movie_info_line" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" 
         android:padding="10dp">

         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp" >

             <TextView
                 android:id="@+id/seat_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
                 android:text="@string/seat_num"/>

             <TextView
                 android:id="@+id/seat_num_text"
                 android:textColor="#AAAAAA"
                 android:textSize="12sp"
                 android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/seat_num_text" />
         </LinearLayout>
         <LinearLayout
             android:layout_marginBottom="5dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <TextView
                 android:id="@+id/park_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
                 android:text="@string/park_address"/>

             <TextView
                 android:id="@+id/park_address_text"
                 android:textColor="#AAAAAA"
                 android:textSize="12sp"
                 android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/park_address_text"/>
         </LinearLayout>
         <LinearLayout
             android:layout_marginBottom="5dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <TextView
                 android:id="@+id/phone_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
                 android:text="@string/phone_num"/>

             <TextView
                 android:id="@+id/phone_num_text"
                 android:textColor="#AAAAAA"
                 android:textSize="12sp"
                 android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/phone_num_text" />
         </LinearLayout>

         <LinearLayout
             android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
             <TextView
                 android:id="@+id/cinema_style"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cinema_style" />

             <ImageView
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
                 android:contentDescription="@string/cinema_style"
                 android:id="@+id/im_a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/d3_pic" />

             <ImageView
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
                 android:contentDescription="@string/cinema_style"
                 android:id="@+id/im_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/vip_pic" />

         </LinearLayout>

         <LinearLayout
             android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
             <TextView
                 android:id="@+id/tv_discount"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_discount" />
             <TextView
                 android:id="@+id/tv_discount_text"
                 android:textColor="#AAAAAA"
                 android:textSize="12sp"
                 android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_discount_text"/>
         </LinearLayout>
<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
             <TextView
                 android:id="@+id/bus_line"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_discount" />
             <TextView
                 android:gravity="center_vertical"
                 android:id="@+id/bus_line_text"
                 android:textColor="#AAAAAA"
                 android:textSize="12sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_discount_text"/>
         </LinearLayout>
     </LinearLayout>

     <ImageView
         android:contentDescription="@string/movie_comment"
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/movie_info_buttom_line" />

     <Gallery
         android:id="@+id/movie_cinema_info_gallery"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />

     <LinearLayout
         android:orientation="horizontal"
         android:gravity="center"
         android:id="@+id/movie_cinema_info_drop"
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:layout_marginBottom="5dp" >
     </LinearLayout>

</LinearLayout>
