<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="#000000" >

    <TextView
        android:id="@+id/movie_cinema_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_cinema_list_title" 
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/movie_cinema_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:text="@string/movie_cinema_address"
            android:layout_weight="10"/>

        <ImageView
            android:layout_weight="1"
            android:contentDescription="@string/cinema_list"
            android:id="@+id/movie_cinema_style_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:layout_weight="1"
            android:contentDescription="@string/cinema_list"
            android:id="@+id/movie_cinema_style_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>
