<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/gallery_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/home_list_backcolor1"
        android:contentDescription="@string/iv_gallery"
        android:padding="5dp"
        android:src="@drawable/home_bigpic1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_bigtext_back"
        android:padding="5dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3" >

            <TextView
                android:id="@+id/gallery_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/gallery_title"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/gallery_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/gallery_title"
                android:text="@string/gallery_content"
                android:textColor="#999999"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/imageView1"
                android:contentDescription="@string/iv_gallery"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" 
                android:src="@drawable/comment_button" />

            <TextView
                android:id="@+id/gallery_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView1"
                android:layout_marginLeft="-8dp"
                android:layout_marginStart="-8dp"
                android:layout_toEndOf="@+id/imageView1"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/gallery_comment"
                android:textColor="#FFFFFF"
                android:textSize="12sp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/gallery_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/gallery_score"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>